--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update; fi
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -t jessie-backports install -y --force-yes flatpak flatpak-builder; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install node yarn; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install yarn; fi
 install:
 - yarn
 before_script:
