--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo "deb http://ftp.debian.org/debian jessie-backports main" | sudo tee /etc/apt/sources.list.d/jessie-backports.list; fi
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update; fi
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -t jessie-backports install -y --force-yes flatpak flatpak-builder; fi
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "shell_session_update() { :; }" >> ~/.direnvrc; shell_session_update() { :; }; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install yarn; fi
 install:
