--- a/.travis.yml
+++ b/.travis.yml
@@ -50,10 +50,10 @@ before_deploy:
   && cd ..; fi
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cd dist/ && tar czf WhatsApp-${TRAVIS_TAG}-linux-armv7l.tar.gz WhatsApp-linux-armv7l/
   && cd ..; fi
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export RELEASE_AMD64_PKG_FILE=$(ls ../whatsapp-desktop*amd64.deb)
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export RELEASE_ARM_PKG_FILE=$(ls ../whatsapp-desktop*armhf.deb)
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export RELEASE_AMD64_RPM_FILE=$(ls rpmbuild/RPMS/x86_64/*.rpm)
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export RELEASE_APPIMAGE_FILE=$(ls dist/whatsapp-desktop*-x86_64.AppImage)
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export RELEASE_AMD64_PKG_FILE=$(ls ../whatsapp-desktop*amd64.deb); fi
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export RELEASE_ARM_PKG_FILE=$(ls ../whatsapp-desktop*armhf.deb); fi
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export RELEASE_AMD64_RPM_FILE=$(ls rpmbuild/RPMS/x86_64/*.rpm); fi
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export RELEASE_APPIMAGE_FILE=$(ls dist/whatsapp-desktop*-x86_64.AppImage); fi
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cd dist/ && zip -qr WhatsApp-${TRAVIS_TAG}-darwin-x64.zip WhatsApp-darwin-x64/ && cd ..; fi
 deploy:
   - provider: releases
